@@ -6,10 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.context.annotation.Import;
-import ru.yandex.practicum.filmorate.dal.mappers.FilmRowMapper;
-import ru.yandex.practicum.filmorate.dal.mappers.GenreRowMapper;
-import ru.yandex.practicum.filmorate.dal.mappers.MpaRowMapper;
-import ru.yandex.practicum.filmorate.dal.mappers.UserRowMapper;
+import ru.yandex.practicum.filmorate.dal.mappers.*;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.exception.ValidationNotObjectException;
 import ru.yandex.practicum.filmorate.model.Film;
@@ -17,6 +14,8 @@ import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Mpa;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.*;
+import ru.yandex.practicum.filmorate.model.Director;
+import ru.yandex.practicum.filmorate.storage.DirectorDbStorage;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -25,13 +24,13 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @JdbcTest
 @AutoConfigureTestDatabase
-@Import({FilmDbStorage.class, FilmRowMapper.class, UserDbStorage.class, UserRowMapper.class,
-        MpaRowMapper.class, GenreRowMapper.class, MpaDbStorage.class, GenreDbStorage.class})
+@Import({FilmDbStorage.class, FilmRowMapper.class, UserDbStorage.class, UserRowMapper.class, MpaRowMapper.class, GenreRowMapper.class, MpaDbStorage.class, GenreDbStorage.class, DirectorDbStorage.class, DirectorRowMapper.class, LongRowMapper.class})
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
 class FilmDbStorageTest {
 
     private final FilmDbStorage filmDbStorage;
     private final UserDbStorage userDbStorage;
+    private final DirectorDbStorage directorDbStorage;
 
     @Test
     void addFilmStorageShouldCreateFilm() {
@@ -47,15 +46,92 @@ class FilmDbStorageTest {
     @Test
     void addFilmStorageWithGenresShouldSaveGenres() {
         Film film = createTestFilm();
-        film.setGenres(List.of(
-                Genre.builder().id(1L).build(),
-                Genre.builder().id(2L).build()
-        ));
+        film.setGenres(List.of(Genre.builder().id(1L).build(), Genre.builder().id(2L).build()));
 
         Film created = filmDbStorage.addFilmStorage(film);
 
         assertEquals(2, created.getGenres().size());
         assertTrue(created.getGenres().stream().anyMatch(g -> g.getId() == 1L));
+    }
+
+    @Test
+    void addFilmStorageWithDirectorShouldSaveDirector() {
+        Director director = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Film film = createTestFilm();
+        film.setDirectors(List.of(Director.builder().id(director.getId()).build()));
+
+        Film created = filmDbStorage.addFilmStorage(film);
+
+        assertNotNull(created.getDirectors());
+        assertEquals(1, created.getDirectors().size());
+        assertEquals(director.getId(), created.getDirectors().getFirst().getId());
+        assertEquals("Кристофер Нолан", created.getDirectors().getFirst().getName());
+    }
+
+    @Test
+    void addFilmStorageWithSeveralDirectorsShouldSaveAllDirectors() {
+        Director director1 = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Director director2 = directorDbStorage.addDirector(Director.builder().name("Стивен Спилберг").build());
+
+        Film film = createTestFilm();
+        film.setDirectors(List.of(Director.builder().id(director1.getId()).build(), Director.builder().id(director2.getId()).build()));
+
+        Film created = filmDbStorage.addFilmStorage(film);
+
+        assertEquals(2, created.getDirectors().size());
+
+        assertTrue(created.getDirectors().stream().anyMatch(d -> d.getId().equals(director1.getId())));
+
+        assertTrue(created.getDirectors().stream().anyMatch(d -> d.getId().equals(director2.getId())));
+    }
+
+    @Test
+    void addFilmStorageWithInvalidDirectorShouldThrowException() {
+        Film film = createTestFilm();
+
+        film.setDirectors(List.of(Director.builder().id(999L).build()));
+
+        assertThrows(ValidationNotObjectException.class, () -> filmDbStorage.addFilmStorage(film));
+    }
+
+    @Test
+    void getFilmByIdShouldReturnDirectors() {
+        Director director = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Film film = createTestFilm();
+
+        film.setDirectors(List.of(Director.builder().id(director.getId()).build()));
+
+        Film created = filmDbStorage.addFilmStorage(film);
+
+        Film found = filmDbStorage.getFilmById(created.getId());
+
+        assertEquals(1, found.getDirectors().size());
+        assertEquals(director.getId(), found.getDirectors().getFirst().getId());
+        assertEquals("Кристофер Нолан", found.getDirectors().getFirst().getName());
+    }
+
+    @Test
+    void updateFilmStorageShouldUpdateDirectors() {
+        Director director1 = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Director director2 = directorDbStorage.addDirector(Director.builder().name("Стивен Спилберг").build());
+
+        Film film = createTestFilm();
+
+        film.setDirectors(List.of(Director.builder().id(director1.getId()).build()));
+
+        Film created = filmDbStorage.addFilmStorage(film);
+
+        Film updatedFilm = Film.builder().id(created.getId()).name("Updated Film").description("Updated Description").releaseDate(LocalDate.of(2021, 2, 2)).duration(130L).mpa(Mpa.builder().id(2L).build()).genres(List.of()).directors(List.of(Director.builder().id(director2.getId()).build())).build();
+
+        Film updated = filmDbStorage.updateFilmStorage(updatedFilm);
+
+        assertEquals(1, updated.getDirectors().size());
+        assertEquals(director2.getId(), updated.getDirectors().getFirst().getId());
+        assertEquals("Стивен Спилберг", updated.getDirectors().getFirst().getName());
     }
 
     @Test
@@ -79,15 +155,7 @@ class FilmDbStorageTest {
         Film film = createTestFilm();
         Film created = filmDbStorage.addFilmStorage(film);
 
-        Film updatedFilm = Film.builder()
-                .id(created.getId())
-                .name("Updated Film")
-                .description("Updated Description")
-                .releaseDate(LocalDate.of(2021, 2, 2))
-                .duration(130L)
-                .mpa(Mpa.builder().id(2L).build())
-                .genres(List.of(Genre.builder().id(3L).build()))
-                .build();
+        Film updatedFilm = Film.builder().id(created.getId()).name("Updated Film").description("Updated Description").releaseDate(LocalDate.of(2021, 2, 2)).duration(130L).mpa(Mpa.builder().id(2L).build()).genres(List.of(Genre.builder().id(3L).build())).build();
 
         Film updated = filmDbStorage.updateFilmStorage(updatedFilm);
 
@@ -103,8 +171,7 @@ class FilmDbStorageTest {
 
         filmDbStorage.removeFilmStorage(created.getId());
 
-        assertThrows(ValidationNotObjectException.class,
-                () -> filmDbStorage.getFilmById(created.getId()));
+        assertThrows(ValidationNotObjectException.class, () -> filmDbStorage.getFilmById(created.getId()));
     }
 
     @Test
@@ -114,7 +181,7 @@ class FilmDbStorageTest {
 
         List<Film> films = filmDbStorage.getFilmStorage();
 
-        assertEquals(2, films.size());
+        assertEquals(5, films.size());
     }
 
     @Test
@@ -130,8 +197,7 @@ class FilmDbStorageTest {
 
     @Test
     void getFilmByIdNotFoundShouldThrowException() {
-        assertThrows(ValidationNotObjectException.class,
-                () -> filmDbStorage.getFilmById(999L));
+        assertThrows(ValidationNotObjectException.class, () -> filmDbStorage.getFilmById(999L));
     }
 
     @Test
@@ -151,8 +217,8 @@ class FilmDbStorageTest {
         filmDbStorage.addLikeFilm(film.getId(), user.getId());
 
         List<Film> topFilms = filmDbStorage.getTopFilms(10);
-        assertEquals(1, topFilms.size());
-        assertEquals(film.getId(), topFilms.get(0).getId());
+        assertEquals(4, topFilms.size());
+        assertEquals(film.getId(), topFilms.getFirst().getId());
     }
 
     @Test
@@ -164,7 +230,7 @@ class FilmDbStorageTest {
         filmDbStorage.addLikeFilm(film.getId(), user.getId());
 
         List<Film> topFilms = filmDbStorage.getTopFilms(10);
-        assertEquals(1, topFilms.size());
+        assertEquals(4, topFilms.size());
     }
 
     @Test
@@ -192,7 +258,7 @@ class FilmDbStorageTest {
         List<Film> topFilms = filmDbStorage.getTopFilms(2);
 
         assertEquals(2, topFilms.size());
-        assertEquals(film1.getId(), topFilms.get(0).getId());
+        assertEquals(film1.getId(), topFilms.getFirst().getId());
     }
 
     @Test
@@ -216,41 +282,272 @@ class FilmDbStorageTest {
         assertEquals(2, found.getGenres().size());
     }
 
+    @Test
+    void searchFilmsByTitleShouldReturnMatchingFilms() {
+        Film film1 = createTestFilm();
+        film1.setName("The Dark Knight");
+
+        Film film2 = createTestFilm2();
+        film2.setName("Interstellar");
+
+        filmDbStorage.addFilmStorage(film1);
+        filmDbStorage.addFilmStorage(film2);
+
+        List<Film> films = filmDbStorage.searchFilms("dark", "title");
+
+        assertEquals(1, films.size());
+        assertEquals("The Dark Knight", films.getFirst().getName());
+    }
+
+    @Test
+    void searchFilmsByDirectorShouldReturnMatchingFilms() {
+        Director director = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Film film = createTestFilm();
+        film.setName("The Dark Knight");
+        film.setDirectors(List.of(Director.builder().id(director.getId()).build()));
+
+        filmDbStorage.addFilmStorage(film);
+
+        List<Film> films = filmDbStorage.searchFilms("нолан", "director");
+
+        assertEquals(1, films.size());
+        assertEquals("The Dark Knight", films.getFirst().getName());
+
+        assertEquals(1, films.getFirst().getDirectors().size());
+        assertEquals("Кристофер Нолан", films.getFirst().getDirectors().getFirst().getName());
+    }
+
+    @Test
+    void searchFilmsByTitleAndDirectorShouldReturnMatchingFilms() {
+        Director nolan = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Film matchingFilm = createTestFilm();
+        matchingFilm.setName("The Dark Knight");
+        matchingFilm.setDirectors(List.of(Director.builder().id(nolan.getId()).build()));
+
+        Film anotherFilm = createTestFilm2();
+        anotherFilm.setName("Interstellar");
+
+        filmDbStorage.addFilmStorage(matchingFilm);
+        filmDbStorage.addFilmStorage(anotherFilm);
+
+        List<Film> films = filmDbStorage.searchFilms("нолан", "title,director");
+
+        assertEquals(1, films.size());
+        assertEquals("The Dark Knight", films.getFirst().getName());
+    }
+
+    @Test
+    void searchFilmsShouldBeCaseInsensitive() {
+        Film film = createTestFilm();
+        film.setName("The Dark Knight");
+
+        filmDbStorage.addFilmStorage(film);
+
+        List<Film> films = filmDbStorage.searchFilms("DARK KNIGHT", "title");
+
+        assertEquals(1, films.size());
+        assertEquals("The Dark Knight", films.getFirst().getName());
+    }
+
+    @Test
+    void searchFilmsShouldReturnEmptyListWhenNothingFound() {
+        filmDbStorage.addFilmStorage(createTestFilm());
+
+        List<Film> films = filmDbStorage.searchFilms("Harry Potter", "title");
+
+        assertTrue(films.isEmpty());
+    }
+
+    @Test
+    void searchFilmsByDirectorShouldNotReturnDuplicates() {
+        Director director1 = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан").build());
+
+        Director director2 = directorDbStorage.addDirector(Director.builder().name("Кристофер Нолан мл.").build());
+
+        Film film = createTestFilm();
+        film.setName("Test Film With Directors");
+        film.setDirectors(List.of(Director.builder().id(director1.getId()).build(), Director.builder().id(director2.getId()).build()));
+
+        filmDbStorage.addFilmStorage(film);
+
+        List<Film> films = filmDbStorage.searchFilms("кристофер", "director");
+
+        assertEquals(1, films.size());
+        assertEquals("Test Film With Directors", films.getFirst().getName());
+    }
+
+    @Test
+    void getFilmsRecommendationTest() {
+        filmDbStorage.addLikeFilm(1, 1);
+        filmDbStorage.addLikeFilm(3, 1);
+        filmDbStorage.addLikeFilm(2, 2);
+        filmDbStorage.addLikeFilm(1, 3);
+        List<Film> recommendations = filmDbStorage.getFilmsRecommendation(3);
+
+        assertNotNull(recommendations);
+        assertEquals(1, recommendations.size());
+        assertEquals(3, recommendations.getFirst().getId());
+        assertEquals("Начало", recommendations.getFirst().getName());
+    }
+
+    @Test
+    void getFilmsRecommendationNotLikedRecUserTest() {
+        filmDbStorage.addLikeFilm(1, 1);
+        filmDbStorage.addLikeFilm(2, 2);
+        List<Film> recommendations = filmDbStorage.getFilmsRecommendation(3);
+
+        assertNotNull(recommendations);
+        assertEquals(0, recommendations.size());
+    }
+
+    @Test
+    void getFilmsRecommendationNotLikedFilmsTest() {
+        List<Film> recommendations = filmDbStorage.getFilmsRecommendation(3);
+
+        assertNotNull(recommendations);
+        assertEquals(0, recommendations.size());
+    }
+
     private Film createTestFilm() {
-        return Film.builder()
-                .name("Test Film")
-                .description("Test Description")
-                .releaseDate(LocalDate.of(2020, 1, 1))
-                .duration(120L)
-                .mpa(Mpa.builder().id(1L).build())
-                .build();
+        return Film.builder().name("Test Film").description("Test Description").releaseDate(LocalDate.of(2020, 1, 1)).duration(120L).mpa(Mpa.builder().id(1L).build()).build();
     }
 
     private Film createTestFilm2() {
-        return Film.builder()
-                .name("Test Film 2")
-                .description("Test Description 2")
-                .releaseDate(LocalDate.of(2021, 2, 2))
-                .duration(130L)
-                .mpa(Mpa.builder().id(2L).build())
-                .build();
+        return Film.builder().name("Test Film 2").description("Test Description 2").releaseDate(LocalDate.of(2021, 2, 2)).duration(130L).mpa(Mpa.builder().id(2L).build()).build();
     }
 
     private User createTestUser() {
-        return User.builder()
-                .email("test@mail.ru")
-                .login("testuser")
-                .name("Test User")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        return User.builder().email("test@mail.ru").login("testuser").name("Test User").birthday(LocalDate.of(1990, 1, 1)).build();
     }
 
     private User createTestUser2() {
-        return User.builder()
-                .email("test2@mail.ru")
-                .login("testuser2")
-                .name("Test User 2")
-                .birthday(LocalDate.of(1992, 2, 2))
-                .build();
+        return User.builder().email("test2@mail.ru").login("testuser2").name("Test User 2").birthday(LocalDate.of(1992, 2, 2)).build();
+    }
+
+    private Film createTestFilmWithGenres(List<Genre> genres) {
+        return Film.builder().name("Test Film With Genres").description("Test Description").releaseDate(LocalDate.of(2020, 1, 1)).duration(120L).mpa(Mpa.builder().id(1L).build()).genres(genres).build();
+    }
+
+    private Film createTestFilm2WithGenres(List<Genre> genres) {
+        return Film.builder().name("Test Film 2 With Genres").description("Test Description 2").releaseDate(LocalDate.of(2021, 2, 2)).duration(130L).mpa(Mpa.builder().id(2L).build()).genres(genres).build();
+    }
+
+    @Test
+    void getTopFilmsWithGenreFilterShouldReturnFilteredFilms() {
+        Film film1 = filmDbStorage.addFilmStorage(createTestFilmWithGenres(List.of(Genre.builder().id(1L).build())));
+        Film film2 = filmDbStorage.addFilmStorage(createTestFilmWithGenres(List.of(Genre.builder().id(2L).build())));
+        User user = userDbStorage.addUserStorage(createTestUser());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user.getId());
+        filmDbStorage.addLikeFilm(film2.getId(), user.getId());
+
+        List<Film> topFilms = filmDbStorage.getTopFilms(10, 1L, null);
+
+        assertEquals(1, topFilms.size());
+        assertEquals(film1.getId(), topFilms.getFirst().getId());
+    }
+
+    @Test
+    void getTopFilmsWithYearFilterShouldReturnFilteredFilms() {
+        Film film2020 = filmDbStorage.addFilmStorage(createTestFilm());      // 2020 год
+        Film film2021 = filmDbStorage.addFilmStorage(createTestFilm2());     // 2021 год
+        User user = userDbStorage.addUserStorage(createTestUser());
+
+        filmDbStorage.addLikeFilm(film2020.getId(), user.getId());
+        filmDbStorage.addLikeFilm(film2021.getId(), user.getId());
+
+        List<Film> topFilms = filmDbStorage.getTopFilms(10, null, 2020);
+
+        assertEquals(1, topFilms.size());
+        assertEquals(film2020.getId(), topFilms.getFirst().getId());
+    }
+
+    @Test
+    void getTopFilmsWithGenreAndYearFilterShouldReturnFilteredFilms() {
+        Film film1 = filmDbStorage.addFilmStorage(createTestFilmWithGenres(List.of(Genre.builder().id(1L).build())));  // 2020
+        Film film2 = filmDbStorage.addFilmStorage(createTestFilm2WithGenres(List.of(Genre.builder().id(1L).build()))); // 2021
+        User user = userDbStorage.addUserStorage(createTestUser());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user.getId());
+        filmDbStorage.addLikeFilm(film2.getId(), user.getId());
+
+        List<Film> topFilms = filmDbStorage.getTopFilms(10, 1L, 2020);
+
+        assertEquals(1, topFilms.size());
+        assertEquals(film1.getId(), topFilms.getFirst().getId());
+    }
+
+    @Test
+    void getCommonFilms_WhenNoCommonFilms_ShouldReturnEmptyList() {
+        Film film1 = filmDbStorage.addFilmStorage(createTestFilm());
+        Film film2 = filmDbStorage.addFilmStorage(createTestFilm2());
+
+        User user1 = userDbStorage.addUserStorage(createTestUser());
+        User user2 = userDbStorage.addUserStorage(createTestUser2());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user1.getId());
+        filmDbStorage.addLikeFilm(film2.getId(), user2.getId());
+
+        List<Film> commonFilms = filmDbStorage.getCommonFilms(user1.getId(), user2.getId());
+
+        assertTrue(commonFilms.isEmpty());
+    }
+
+    @Test
+    void getCommonFilms_ShouldBeSortedByPopularity() {
+        Film film1 = filmDbStorage.addFilmStorage(createTestFilm());
+        Film film2 = filmDbStorage.addFilmStorage(createTestFilm2());
+        Film film3 = filmDbStorage.addFilmStorage(createTestFilm3());
+
+        User user1 = userDbStorage.addUserStorage(createTestUser());
+        User user2 = userDbStorage.addUserStorage(createTestUser2());
+        User user3 = userDbStorage.addUserStorage(createTestUser3());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user1.getId());
+        filmDbStorage.addLikeFilm(film1.getId(), user2.getId());
+        filmDbStorage.addLikeFilm(film1.getId(), user3.getId());
+
+        filmDbStorage.addLikeFilm(film2.getId(), user1.getId());
+        filmDbStorage.addLikeFilm(film2.getId(), user2.getId());
+
+        filmDbStorage.addLikeFilm(film3.getId(), user1.getId());
+        filmDbStorage.addLikeFilm(film3.getId(), user2.getId());
+
+        List<Film> commonFilms = filmDbStorage.getCommonFilms(user1.getId(), user2.getId());
+
+        assertEquals(3, commonFilms.size());
+        assertEquals(film1.getId(), commonFilms.get(0).getId());
+        assertTrue(commonFilms.get(1).getId() < commonFilms.get(2).getId());
+    }
+
+    private Film createTestFilm3() {
+        return Film.builder().name("Test Film 3").description("Test Description 3").releaseDate(LocalDate.of(2022, 3, 3)).duration(140L).mpa(Mpa.builder().id(3L).build()).build();
+    }
+
+    private User createTestUser3() {
+        return User.builder().email("test3@mail.ru").login("testuser3").name("Test User 3").birthday(LocalDate.of(1993, 3, 3)).build();
+    }
+
+    @Test
+    void getCommonFilms_ShouldReturnFilmsLikedByBothUsers() {
+        Film film1 = filmDbStorage.addFilmStorage(createTestFilm());
+        Film film2 = filmDbStorage.addFilmStorage(createTestFilm2());
+        Film film3 = filmDbStorage.addFilmStorage(createTestFilm3());
+
+        User user1 = userDbStorage.addUserStorage(createTestUser());
+        User user2 = userDbStorage.addUserStorage(createTestUser2());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user1.getId());
+        filmDbStorage.addLikeFilm(film2.getId(), user1.getId());
+
+        filmDbStorage.addLikeFilm(film1.getId(), user2.getId());
+        filmDbStorage.addLikeFilm(film3.getId(), user2.getId());
+
+        List<Film> commonFilms = filmDbStorage.getCommonFilms(user1.getId(), user2.getId());
+
+        assertEquals(1, commonFilms.size());
+        assertEquals(film1.getId(), commonFilms.getFirst().getId());
     }
 }
