@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.context.annotation.Import;
+import ru.yandex.practicum.filmorate.dal.mappers.LongRowMapper;
 import ru.yandex.practicum.filmorate.dal.mappers.UserRowMapper;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.exception.ValidationNotObjectException;
@@ -19,7 +20,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @JdbcTest
 @AutoConfigureTestDatabase
-@Import({UserDbStorage.class, UserRowMapper.class})
+@Import({UserDbStorage.class, UserRowMapper.class, LongRowMapper.class})
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
 class UserDbStorageTest {
 
@@ -40,11 +41,7 @@ class UserDbStorageTest {
 
     @Test
     void addUserStorageWithoutNameTest() {
-        User user = User.builder()
-                .email("test@mail.ru")
-                .login("testuser")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        User user = User.builder().email("test@mail.ru").login("testuser").birthday(LocalDate.of(1990, 1, 1)).build();
 
         User created = userDbStorage.addUserStorage(user);
 
@@ -57,60 +54,35 @@ class UserDbStorageTest {
         User user1 = createTestUser();
         userDbStorage.addUserStorage(user1);
 
-        User user2 = User.builder()
-                .email("test@mail.ru")
-                .login("anotheruser")
-                .name("Another User")
-                .birthday(LocalDate.of(1991, 1, 1))
-                .build();
+        User user2 = User.builder().email("test@mail.ru").login("anotheruser").name("Another User").birthday(LocalDate.of(1991, 1, 1)).build();
 
         assertThrows(ValidationException.class, () -> userDbStorage.addUserStorage(user2));
     }
 
     @Test
     void addUserStorageWithEmptyLoginTest() {
-        User user = User.builder()
-                .email("test@mail.ru")
-                .login("")
-                .name("Test User")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        User user = User.builder().email("test@mail.ru").login("").name("Test User").birthday(LocalDate.of(1990, 1, 1)).build();
 
         assertThrows(ValidationException.class, () -> userDbStorage.addUserStorage(user));
     }
 
     @Test
     void addUserStorageWithLoginContainingSpacesTest() {
-        User user = User.builder()
-                .email("test@mail.ru")
-                .login("test user")
-                .name("Test User")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        User user = User.builder().email("test@mail.ru").login("test user").name("Test User").birthday(LocalDate.of(1990, 1, 1)).build();
 
         assertThrows(ValidationException.class, () -> userDbStorage.addUserStorage(user));
     }
 
     @Test
     void addUserStorageWithFutureBirthdayTest() {
-        User user = User.builder()
-                .email("test@mail.ru")
-                .login("testuser")
-                .name("Test User")
-                .birthday(LocalDate.now().plusDays(1))
-                .build();
+        User user = User.builder().email("test@mail.ru").login("testuser").name("Test User").birthday(LocalDate.now().plusDays(1)).build();
 
         assertThrows(ValidationException.class, () -> userDbStorage.addUserStorage(user));
     }
 
     @Test
     void addUserStorageWithEmptyEmailTest() {
-        User user = User.builder()
-                .email("")
-                .login("testuser")
-                .name("Test User")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        User user = User.builder().email("").login("testuser").name("Test User").birthday(LocalDate.of(1990, 1, 1)).build();
 
         assertThrows(ValidationException.class, () -> userDbStorage.addUserStorage(user));
     }
@@ -120,13 +92,7 @@ class UserDbStorageTest {
         User user = createTestUser();
         User created = userDbStorage.addUserStorage(user);
 
-        User updatedUser = User.builder()
-                .id(created.getId())
-                .email("updated@mail.ru")
-                .login("updateduser")
-                .name("Updated User")
-                .birthday(LocalDate.of(1991, 2, 2))
-                .build();
+        User updatedUser = User.builder().id(created.getId()).email("updated@mail.ru").login("updateduser").name("Updated User").birthday(LocalDate.of(1991, 2, 2)).build();
 
         User updated = userDbStorage.updateUserStorage(updatedUser);
 
@@ -143,8 +109,7 @@ class UserDbStorageTest {
 
         userDbStorage.removeUserStorage(created.getId());
 
-        assertThrows(ValidationNotObjectException.class,
-                () -> userDbStorage.getUserById(created.getId()));
+        assertThrows(ValidationNotObjectException.class, () -> userDbStorage.getUserById(created.getId()));
     }
 
     @Test
@@ -154,7 +119,7 @@ class UserDbStorageTest {
 
         List<User> users = userDbStorage.getUserStorage();
 
-        assertEquals(2, users.size());
+        assertEquals(5, users.size());
     }
 
     @Test
@@ -172,8 +137,7 @@ class UserDbStorageTest {
 
     @Test
     void getUserByIdNotFoundTest() {
-        assertThrows(ValidationNotObjectException.class,
-                () -> userDbStorage.getUserById(999L));
+        assertThrows(ValidationNotObjectException.class, () -> userDbStorage.getUserById(999L));
     }
 
     @Test
@@ -194,7 +158,7 @@ class UserDbStorageTest {
 
         List<User> friends = userDbStorage.getAllFriends(user1.getId());
         assertEquals(1, friends.size());
-        assertEquals(user2.getId(), friends.get(0).getId());
+        assertEquals(user2.getId(), friends.getFirst().getId());
     }
 
     @Test
@@ -210,8 +174,8 @@ class UserDbStorageTest {
 
         assertEquals(1, friends1.size());
         assertEquals(1, friends2.size());
-        assertEquals(user2.getId(), friends1.get(0).getId());
-        assertEquals(user1.getId(), friends2.get(0).getId());
+        assertEquals(user2.getId(), friends1.getFirst().getId());
+        assertEquals(user1.getId(), friends2.getFirst().getId());
     }
 
     @Test
@@ -274,7 +238,7 @@ class UserDbStorageTest {
         List<User> commonFriends = userDbStorage.getCommonFriends(user1.getId(), user2.getId());
 
         assertEquals(1, commonFriends.size());
-        assertEquals(user3.getId(), commonFriends.get(0).getId());
+        assertEquals(user3.getId(), commonFriends.getFirst().getId());
     }
 
     @Test
@@ -308,29 +272,14 @@ class UserDbStorageTest {
     }
 
     private User createTestUser() {
-        return User.builder()
-                .email("test@mail.ru")
-                .login("testuser")
-                .name("Test User")
-                .birthday(LocalDate.of(1990, 1, 1))
-                .build();
+        return User.builder().email("test@mail.ru").login("testuser").name("Test User").birthday(LocalDate.of(1990, 1, 1)).build();
     }
 
     private User createTestUser2() {
-        return User.builder()
-                .email("test2@mail.ru")
-                .login("testuser2")
-                .name("Test User 2")
-                .birthday(LocalDate.of(1992, 2, 2))
-                .build();
+        return User.builder().email("test2@mail.ru").login("testuser2").name("Test User 2").birthday(LocalDate.of(1992, 2, 2)).build();
     }
 
     private User createTestUser3() {
-        return User.builder()
-                .email("test3@mail.ru")
-                .login("testuser3")
-                .name("Test User 3")
-                .birthday(LocalDate.of(1993, 3, 3))
-                .build();
+        return User.builder().email("test3@mail.ru").login("testuser3").name("Test User 3").birthday(LocalDate.of(1993, 3, 3)).build();
     }
 }
